Test/errors/circular/b.cb
import "entry_a.cb";
